# 2026GKD_Software_Test_zjl2401

first_test/: CMakeLists.txt  TaskBase.cpp  TaskBase.h  TaskManager.cpp  TaskManager.h  answer to tip  main.cpp  test_data_basic.txt  test_data_complete.txt  test_data_edge_cases.txt
